@@ -1,6 +1,8 @@
 package Graphics::Primitive::Driver::TextLayout;
 use Moose::Role;
 
+requires 'slice';
+
 has 'component' => (
     is => 'rw',
     isa => 'Graphics::Primitive::TextBox',
@@ -50,6 +52,19 @@ Set/Get the component from which to draw layout information.
 =item I<height>
 
 Set/Get this layout's height
+
+=item I<slice>
+
+Implemented by role consumer. Given an offset and an optional size, returns a
+TextBox containing lines from this layout that come as close to C<$size>
+without exceeding it.  This method is provided to allow incremental rendering
+of text.  For example, if you have a series of containers 80 units high, you
+might write code like this:
+
+  for(my $i = 0; $i < 3; $i++) {
+      $textbox = $layout->slice($i * 80, 80);
+      # render the text
+  }
 
 =item I<width>
 
